--- a/login.html
+++ b/login.html
@@ -8,8 +8,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="robots" content="all,follow">
     <link rel="stylesheet" href="https://www.jq22.com/jquery/bootstrap-4.2.1.css">
-    <link rel="stylesheet" href="./CSS/login&register.css" id="theme-stylesheet">
-    <link rel="stylesheet" href="./CSS/style.css" />
+    <link rel="stylesheet" href="./css/login&register.css" id="theme-stylesheet">
+    <link rel="stylesheet" href="./css/style.css" />
     <title>login</title>
 </head>
 
