功能页上传功能1.0

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   <!-- 网页头部 -->
   <header>
-    <a href="#home">
+    <a href="#home" style="text-decoration: none;">
       <div class="logo">
         爱若卫士
       </div>
