--- a/function.html
+++ b/function.html
@@ -6,12 +6,80 @@
     <title>function</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- <link rel="stylesheet" href="./css/matrix-style.css"> -->
     <link rel="stylesheet" href="./css/style.css" />
     <!-- 新 Bootstrap5 核心 CSS 文件 -->
-    <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/5.1.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css"
+        integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
+    <link href="./css/fileinput.css" media="all" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" crossorigin="anonymous">
+    <link href="./themes/explorer-fa5/theme.css" media="all" rel="stylesheet" type="text/css" />
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.4.1/dist/js/bootstrap.min.js"
+        crossorigin="anonymous"></script>
+    <script src="./js/plugins/buffer.min.js" type="text/javascript"></script>
+    <script src="./js/plugins/filetype.min.js" type="text/javascript"></script>
+    <script src="./js/plugins/piexif.js" type="text/javascript"></script>
+    <script src="./js/plugins/sortable.js" type="text/javascript"></script>
+    <script src="./js/fileinput.js" type="text/javascript"></script>
+    <script src="./js/locales/fr.js" type="text/javascript"></script>
+    <script src="./js/locales/es.js" type="text/javascript"></script>
+    <script src="./themes/gly/theme.js" type="text/javascript"></script>
+    <script src="./themes/fa5/theme.js" type="text/javascript"></script>
+    <script src="./themes/explorer-fa5/theme.js" type="text/javascript"></script>
+    <script src="./index.js"></script>
+    <script>$.fn.fileinput.defaults.theme = 'gly';</script>
+    <style>
+        .sidebar {
+            position: fixed;
+            top: 0;
+            bottom: 0;
+            left: 0;
+            z-index: 100;
+            padding: 80px 0 0;
+            box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
+            z-index: 99;
+        }
+
+        @media (max-width: 767.98px) {
+            .sidebar {
+                top: 11.5rem;
+                padding: 0;
+            }
+        }
+
+        .navbar {
+            box-shadow: inset 0 -1px 0 rgba(0, 0, 0, .1);
+        }
+
+        @media (min-width: 767.98px) {
+            .navbar {
+                top: 0;
+                position: sticky;
+                z-index: 999;
+            }
+        }
+
+        .sidebar .nav-link {
+            color: black;
+            padding: 1.5rem 1rem;
+            text-align: center;
+        }
+
+        .sidebar .nav-link:hover {
+            color: white;
+            background-color: black;
+        }
+
+        .ml-2 {
+            font-size: 20px;
+
+        }
+    </style>
 </head>
 
-<body>
+<body style="overflow-x:hidden">
     <!-- 网页头部 -->
     <header style="background-color: black;">
         <a href="index.html" style="text-decoration: none;">
@@ -19,21 +87,85 @@
                 爱若卫士
             </div>
         </a>
-        <div class="burger">
-            <div class="burger-line1"></div>
-            <div class="burger-line2"></div>
-            <div class="burger-line3"></div>
-        </div>
     </header>
+    <div class="container-fluid">
+        <div class="row">
+            <nav id="sidebar" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
+                <div class="position-sticky">
+                    <ul class="nav flex-column">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#" id="algorithm1">
 
+                                <span class="ml-2">算法1</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#" id="algorithm2">
 
-    <!-- 引入JS文件 -->
-    <script src="./index.js"></script>
-    <!--  popper.min.js 用于弹窗、提示、下拉菜单 -->
-    <script src="https://cdn.staticfile.org/popper.js/2.9.3/umd/popper.min.js"></script>
-    <!-- 最新的 Bootstrap5 核心 JavaScript 文件 -->
-    <script src="https://cdn.staticfile.org/twitter-bootstrap/5.1.1/js/bootstrap.min.js"></script>
-    
+                                <span class="ml-2">算法2</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#" id="algorithm3">
+
+                                <span class="ml-2">算法3</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#" id="algorithm4">
+
+                                <span class="ml-2">算法4</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#" id="algorithm5">
+
+                                <span class="ml-2">算法5</span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#" id="algorithm6">
+
+                                <span class="ml-2">算法6</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+            <div class="col-md-9 ml-sm-auto col-lg-10 px-md-4 py-4">
+                <h1 class="h2">Step1 上传文件</h1>
+                <br>
+                <form enctype="multipart/form-data">
+                    <div class="file-loading">
+                        <input id="file-0a" class="file" type="file" multiple data-min-file-count="1" data-theme="fa5">
+                    </div>
+                    <br>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <button type="reset" class="btn btn-outline-secondary">Reset</button>
+                </form>
+                <br><br><br>
+
+                <h1 class="h2">Step2 输入参数</h1>
+
+                <h1 class="h2">Step3 查看结果</h1>
+
+            </div>
+        </div>
+    </div>
+    <script>
+        $(document).ready(function () {
+            // initialize with defaults
+            $("#file-0a").fileinput({
+                'showPreview': false,
+                'allowedFileExtensions': ['csv'],
+            });
+
+            // with plugin options
+            $("#file-0a").fileinput({ 'uploadUrl': '/path/to/your-upload-api', 'previewFileType': 'any' });
+        });
+        var algorithm1 = document.querySelector('#algorithm1');
+        
+    </script>
 </body>
 
 </html>
