--- a/function.html
+++ b/function.html
@@ -11,6 +11,7 @@
     <!-- 新 Bootstrap5 核心 CSS 文件 -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css"
         integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
+    <!-- <link href="https://cdn.bootcdn.net/ajax/libs/twitter-bootstrap/5.0.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
     <link href="./css/fileinput.css" media="all" rel="stylesheet" type="text/css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" crossorigin="anonymous">
@@ -94,40 +95,46 @@
                 <div class="position-sticky">
                     <ul class="nav flex-column">
                         <li class="nav-item">
-                            <a class="nav-link" href="#" id="algorithm1">
-
-                                <span class="ml-2">算法1</span>
-                            </a>
+                            <div class="algorithm">
+                                <a class="nav-link" href="#">
+                                    <span class="ml-2">算法1</span>
+                                </a>
+                            </div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#" id="algorithm2">
-
-                                <span class="ml-2">算法2</span>
-                            </a>
+                            <div class="algorithm">
+                                <a class="nav-link" href="#">
+                                    <span class="ml-2">算法2</span>
+                                </a>
+                            </div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#" id="algorithm3">
-
-                                <span class="ml-2">算法3</span>
-                            </a>
+                            <div class="algorithm">
+                                <a class="nav-link" href="#">
+                                    <span class="ml-2">算法3</span>
+                                </a>
+                            </div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#" id="algorithm4">
-
-                                <span class="ml-2">算法4</span>
-                            </a>
+                            <div class="algorithm">
+                                <a class="nav-link" href="#">
+                                    <span class="ml-2">算法4</span>
+                                </a>
+                            </div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#" id="algorithm5">
-
-                                <span class="ml-2">算法5</span>
-                            </a>
+                            <div class="algorithm">
+                                <a class="nav-link" href="#">
+                                    <span class="ml-2">算法5</span>
+                                </a>
+                            </div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#" id="algorithm6">
-
-                                <span class="ml-2">算法6</span>
-                            </a>
+                            <div class="algorithm">
+                                <a class="nav-link" href="#">
+                                    <span class="ml-2">算法6</span>
+                                </a>
+                            </div>
                         </li>
                     </ul>
                 </div>
@@ -146,9 +153,102 @@
                 <br><br><br>
 
                 <h1 class="h2">Step2 输入参数</h1>
+                <br>
+                <div class="_parameter">
+                    <div class="input-group mb-3">
+                        <span class="input-group-text">参数1</span>
+                        <input type="text" class="form-control">
+                    </div>
+                    <div class="input-group mb-3">
+                        <span class="input-group-text">参数2</span>
+                        <input type="text" class="form-control">
+                    </div>
+                    <div class="input-group mb-3">
+                        <span class="input-group-text">参数3</span>
+                        <input type="text" class="form-control">
+                    </div>
+                </div>
 
+                <div class="_parameter" style="display: none;">
+                    <div class="input-group mb-3">
+                        <span class="input-group-text">参数1</span>
+                        <input type="text" class="form-control">
+                    </div>
+                    <div class="input-group mb-3">
+                        <span class="input-group-text">参数2.</span>
+                        <input type="text" class="form-control">
+                    </div>
+                    <div class="input-group mb-3">
+                        <span class="input-group-text">参数3.</span>
+                        <input type="text" class="form-control">
+                    </div>
+                </div>
+
+                <div class="_parameter" style="display: none;">
+                    <div class="input-group mb-3">
+                        <span class="input-group-text">参数1.</span>
+                        <input type="text" class="form-control">
+                    </div>
+                    <div class="input-group mb-3">
+                        <span class="input-group-text">参数2.</span>
+                        <input type="text" class="form-control">
+                    </div>
+                    <div class="input-group mb-3">
+                        <span class="input-group-text">参数3</span>
+                        <input type="text" class="form-control">
+                    </div>
+                </div>
+
+                <div class="_parameter" style="display: none;">
+                    <div class="input-group mb-3">
+                        <span class="input-group-text">参数1.</span>
+                        <input type="text" class="form-control">
+                    </div>
+                    <div class="input-group mb-3">
+                        <span class="input-group-text">参数2.</span>
+                        <input type="text" class="form-control">
+                    </div>
+                    <div class="input-group mb-3">
+                        <span class="input-group-text">参数3.</span>
+                        <input type="text" class="form-control">
+                    </div>
+                </div>
+
+                <div class="_parameter" style="display: none;">
+                    <div class="input-group mb-3">
+                        <span class="input-group-text">参数1/</span>
+                        <input type="text" class="form-control">
+                    </div>
+                    <div class="input-group mb-3">
+                        <span class="input-group-text">参数2/</span>
+                        <input type="text" class="form-control">
+                    </div>
+                    <div class="input-group mb-3">
+                        <span class="input-group-text">参数3</span>
+                        <input type="text" class="form-control">
+                    </div>
+                </div>
+
+                <div class="_parameter" style="display: none;">
+                    <div class="input-group mb-3">
+                        <span class="input-group-text">参数1/</span>
+                        <input type="text" class="form-control">
+                    </div>
+                    <div class="input-group mb-3">
+                        <span class="input-group-text">参数2</span>
+                        <input type="text" class="form-control">
+                    </div>
+                    <div class="input-group mb-3">
+                        <span class="input-group-text">参数3</span>
+                        <input type="text" class="form-control">
+                    </div>
+                </div>
+
+                <br><br><br>
                 <h1 class="h2">Step3 查看结果</h1>
+                <br>
 
+                <br><br><br>
             </div>
         </div>
     </div>
@@ -163,8 +263,47 @@
             // with plugin options
             $("#file-0a").fileinput({ 'uploadUrl': '/path/to/your-upload-api', 'previewFileType': 'any' });
         });
-        var algorithm1 = document.querySelector('#algorithm1');
-        
+        window.onload = function () {
+            var algorithms = document.getElementsByClassName('algorithm');
+            var _parameters = document.getElementsByClassName('_parameter');
+            algorithms[0].addEventListener('click', function () {
+                for (var j = 0; j < algorithms.length; j++) {
+                    _parameters[j].style.display = 'none';
+                }
+                _parameters[0].style.display = 'block';
+            })
+            algorithms[1].addEventListener('click', function () {
+                for (var j = 0; j < algorithms.length; j++) {
+                    _parameters[j].style.display = 'none';
+                }
+                _parameters[1].style.display = 'block';
+            })
+            algorithms[2].addEventListener('click', function () {
+                for (var j = 0; j < algorithms.length; j++) {
+                    _parameters[j].style.display = 'none';
+                }
+                _parameters[2].style.display = 'block';
+            })
+            algorithms[3].addEventListener('click', function () {
+                for (var j = 0; j < algorithms.length; j++) {
+                    _parameters[j].style.display = 'none';
+                }
+                _parameters[3].style.display = 'block';
+            })
+            algorithms[4].addEventListener('click', function () {
+                for (var j = 0; j < algorithms.length; j++) {
+                    _parameters[j].style.display = 'none';
+                }
+                _parameters[4].style.display = 'block';
+            })
+            algorithms[5].addEventListener('click', function () {
+                for (var j = 0; j < algorithms.length; j++) {
+                    _parameters[j].style.display = 'none';
+                }
+                _parameters[5].style.display = 'block';
+            })
+        }
+
     </script>
 </body>
 
